summative.moria.Moria.scala.error
Erreur de compilation :
Moria:2: error: not found: value Direction
  Direction.EST
  ^Moria:15: error: value unary_! is not a member of Unit
  while (!trouverBiscuit()){
         ^